Fix layout broken by display:flex on HorizontalLayout
Caused by Iea7cbc00d988504660754e8728707d0021ae37d7

I'm not sure if this code should even be using HorizontalLayout. It
looks like you were already overriding most of the things it does
(which is not much).

Bug: T380471

--- a/modules/ui/styles/mw.cx.ui.TranslationView.less
+++ b/modules/ui/styles/mw.cx.ui.TranslationView.less
@@ -22,9 +22,13 @@
 		}
 	}
 
-	.cx-widget__columns.oo-ui-horizontalLayout > .oo-ui-layout,
-	.cx-content-container.oo-ui-horizontalLayout > .oo-ui-layout {
-		margin-right: 0;
+	.cx-widget__columns.oo-ui-horizontalLayout,
+	.cx-content-container.oo-ui-horizontalLayout {
+		display: block;
+
+		> .oo-ui-layout {
+			margin-right: 0;
+		}
 	}
 }
 
